--- a/category.html
+++ b/category.html
@@ -777,5 +777,6 @@
 	<script type="text/javascript" src="/js/jquery.fontsize.js" id="zeno_font_resizer_fontsize-js"></script>
 	<script type="text/javascript" src="/js/global.js" id="rowling_global-js"></script>
 	<script type="text/javascript" src="/js/script.js" id="jabvfcr_script-js"></script>
+	<!--|||||before_closing_body|||||-->
 </body>
 </html>
