--- a/page.html
+++ b/page.html
@@ -994,5 +994,6 @@
 	<script type="text/javascript" src="/js/comment-reply.min.js" id="comment-reply-js" async="async"
 		data-wp-strategy="async"></script>
 	<script type="text/javascript" src="/js/script.js" id="jabvfcr_script-js"></script>
+	<!--|||||before_closing_body|||||-->
 </body>
 </html>
