--- a/search.html
+++ b/search.html
@@ -1178,8 +1178,12 @@
 					<li class="number" id="page_navigation_number" style="display:none;">
 						<a href="./?s=|||||search_keyword|||||&page=|||||page_index|||||">|||||page_index|||||</a>
 					</li>
+					<li class="number active" id="page_navigation_number_active" style="display:none;">
+						<a href="./?s=|||||search_keyword|||||&page=|||||page_index|||||">|||||page_index|||||</a>
+					</li>
 					<div class="clear" id="page_navigation_clear" style="display:none;"></div>
 				</div><!-- .archive-nav -->
+				<!--|||||search_script|||||-->
 			</div><!-- .content -->
 			<!--|||||sidebar|||||-->
 		</div><!-- .wrapper.section-inner -->
