--- a/search.html
+++ b/search.html
@@ -1107,7 +1107,7 @@
 									{
 										if('查看留言'!=count_comments.innerHTML)
 										{
-											display_comments.innerHTML=display_comments.replace('查看留言',count_comments.innerHTML);
+											display_comments.innerHTML=display_comments.innerHTML.replace('查看留言',count_comments.innerHTML);
 										}
 										else
 										{
@@ -1137,7 +1137,7 @@
 									{
 										if('查看留言'!=count_comments.innerHTML)
 										{
-											display_comments.innerHTML=display_comments.replace('查看留言',count_comments.innerHTML);
+											display_comments.innerHTML=display_comments.innerHTML.replace('查看留言',count_comments.innerHTML);
 										}
 										else
 										{
