--- a/category.html
+++ b/category.html
@@ -761,7 +761,7 @@
 									{
 										if('查看留言'!=count_comments.innerHTML)
 										{
-											display_comments.innerHTML=display_comments.replace('查看留言',count_comments.innerHTML);
+											display_comments.innerHTML=display_comments.innerHTML.replace('查看留言',count_comments.innerHTML);
 										}
 										else
 										{
@@ -791,7 +791,7 @@
 									{
 										if('查看留言'!=count_comments.innerHTML)
 										{
-											display_comments.innerHTML=display_comments.replace('查看留言',count_comments.innerHTML);
+											display_comments.innerHTML=display_comments.innerHTML.replace('查看留言',count_comments.innerHTML);
 										}
 										else
 										{
