--- a/search.html
+++ b/search.html
@@ -1098,23 +1098,18 @@
 								<a name="count_comments" href="|||||original_url|||||#disqus_thread" style="display:none;">查看留言</a>
 								— <a name="display_comments" href="|||||url|||||#disqus_thread">查看留言</a>
 								<script>
-									var script_tag=document.getElementsByTagName('script');
-									script_tag=script_tag[script_tag.length-1];
-									var parent=script_tag.parentNode;
-									var count_comments=parent.getElementsByTagName('a')[0];
-									var display_comments=parent.getElementsByTagName('a')[1];
-									function check(count_comments,display_comments)
-									{
-										if('查看留言'!=count_comments.innerHTML)
-										{
-											display_comments.innerHTML=display_comments.innerHTML.replace('查看留言',count_comments.innerHTML);
+									var script_tag = document.getElementsByTagName('script');
+									script_tag = script_tag[script_tag.length - 1];
+									var parent = script_tag.parentNode;
+									function check(count_comments, display_comments) {
+										if ('查看留言' != count_comments.innerHTML) {
+											display_comments.innerHTML = display_comments.innerHTML.replace('查看留言', count_comments.innerHTML);
 										}
-										else
-										{
-											setTimeout(()=>check(count_comments,display_comments),200);
+										else {
+											setTimeout(() => check(count_comments, display_comments), 200);
 										}
 									}
-									check(count_comments,display_comments);
+									check(parent.getElementsByTagName('a')[0], parent.getElementsByTagName('a')[1]);
 								</script>
 							</p>
 						</header><!-- .post-header -->
@@ -1128,23 +1123,18 @@
 								<a name="count_comments" href="|||||original_url|||||#disqus_thread" style="display:none;">查看留言</a>
 								— <a name="display_comments" href="|||||url|||||#disqus_thread">查看留言</a>
 								<script>
-									var script_tag=document.getElementsByTagName('script');
-									script_tag=script_tag[script_tag.length-1];
-									var parent=script_tag.parentNode;
-									var count_comments=parent.getElementsByTagName('a')[0];
-									var display_comments=parent.getElementsByTagName('a')[1];
-									function check(count_comments,display_comments)
-									{
-										if('查看留言'!=count_comments.innerHTML)
-										{
-											display_comments.innerHTML=display_comments.innerHTML.replace('查看留言',count_comments.innerHTML);
+									var script_tag = document.getElementsByTagName('script');
+									script_tag = script_tag[script_tag.length - 1];
+									var parent = script_tag.parentNode;
+									function check(count_comments, display_comments) {
+										if ('查看留言' != count_comments.innerHTML) {
+											display_comments.innerHTML = display_comments.innerHTML.replace('查看留言', count_comments.innerHTML);
 										}
-										else
-										{
-											setTimeout(()=>check(count_comments,display_comments),200);
+										else {
+											setTimeout(() => check(count_comments, display_comments), 200);
 										}
 									}
-									check(count_comments,display_comments);
+									check(parent.getElementsByTagName('a')[0], parent.getElementsByTagName('a')[1]);
 								</script>
 							</p>
 						</header><!-- .post-header -->
