--- a/category.html
+++ b/category.html
@@ -755,8 +755,6 @@
 									var script_tag = document.getElementsByTagName('script');
 									script_tag = script_tag[script_tag.length - 1];
 									var parent = script_tag.parentNode;
-									var count_comments = parent.getElementsByTagName('a')[0];
-									var display_comments = parent.getElementsByTagName('a')[1];
 									function check(count_comments, display_comments) {
 										if ('查看留言' != count_comments.innerHTML) {
 											display_comments.innerHTML = display_comments.innerHTML.replace('查看留言', count_comments.innerHTML);
@@ -765,7 +763,7 @@
 											setTimeout(() => check(count_comments, display_comments), 200);
 										}
 									}
-									check(count_comments, display_comments);
+									check(parent.getElementsByTagName('a')[0], parent.getElementsByTagName('a')[1]);
 								</script>
 							</p>
 						</header><!-- .post-header -->
@@ -782,8 +780,6 @@
 									var script_tag = document.getElementsByTagName('script');
 									script_tag = script_tag[script_tag.length - 1];
 									var parent = script_tag.parentNode;
-									var count_comments = parent.getElementsByTagName('a')[0];
-									var display_comments = parent.getElementsByTagName('a')[1];
 									function check(count_comments, display_comments) {
 										if ('查看留言' != count_comments.innerHTML) {
 											display_comments.innerHTML = display_comments.innerHTML.replace('查看留言', count_comments.innerHTML);
@@ -792,7 +788,7 @@
 											setTimeout(() => check(count_comments, display_comments), 200);
 										}
 									}
-									check(count_comments, display_comments);
+									check(parent.getElementsByTagName('a')[0], parent.getElementsByTagName('a')[1]);
 								</script>
 							</p>
 						</header><!-- .post-header -->
